# enterprise-aura

./: .env.example  .flake8  .flake8.bak  .gitignore  .pre-commit-config.yaml  .ruffignore  CHANGELOG.md  Makefile  README.md  cleanup_tests.sh  constraints-macos.txt  demo.jsonl  docker-compose.devcontainer.yml  docker-compose.mongo.yml  dump_tree.py  enterprise-aura-patch.diff  final_enterprise_aura_patch.diff  m0.diff  m0.patch  manual_cleanup.sh  project_tree.json  project_tree.txt  pyproject.toml  pyproject.toml.bak  pyrightconfig.json  pytest.ini  ruff.toml  ruff.toml.bak  setup.cfg  verify_tests.sh
.bak_aura/aura_v2/: main.py
.bak_aura/aura_v2/domain/: confidence.py  velocity.py
.bak_aura/aura_v2/infrastructure/: container.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-cd-pipeline.yml  ci.yml  security.yml  smoke-v3.yml  type-and-security.yml
artifacts/: soak_pass.txt
artifacts/pylance/: pyright_output.json  pyright_output.txt  summary.json
artifacts/validation/: VALIDATION.md
aura_v2/: ARCHITECTURE.md  __init__.py  diagnostic_dashboard.py  main.py  setup_dashboard.py  test_dashboard_setup.py
aura_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aura_v2/#config/: Dockerfile
aura_v2/#deployment/: rollback.py
aura_v2/.config/: feature_flags.yaml
aura_v2/api/: auth.py  schemas.py
aura_v2/api/routes/: tracks.py
aura_v2/application/coordinators/: __init__.py  advanced_intelligence_coordinator.py
aura_v2/application/events/: event_publisher.py
aura_v2/application/pipeline/: fusion_pipeline_factory.py
aura_v2/application/pipelines/: real_time_tracking_pipeline.py  real_time_tracking_pipeline.py.bak  tracking_pipeline.py
aura_v2/application/services/: __init__.py  collision_predictor.py  threat_analyzer.py
aura_v2/application/use_cases/: detect_and_track.py  detect_and_track_command.py  process_detections.py
aura_v2/config/: Dockerfile  feature_flags.yaml  performance.py
aura_v2/domain/: __init__.py  confidence.py  position.py  velocity.py
aura_v2/domain/association/: geometry.py  hungarian.py  hungarian_costs.py  hungarian_solver.py  hungarian_solver_refactored.py  log_domain_murty_wrapper.py  pipeline.py  policy.yaml  types.py
aura_v2/domain/dss/: engine.legacy.py  engine.py  policies.yaml
aura_v2/domain/entities/: __init__.py  detection.py  track.py
aura_v2/domain/events/: __init__.py  tracking_events.py
aura_v2/domain/filters/: adaptive_noise.py  models.py  sr_ukf.py  ukf.legacy.py  ukf.py
aura_v2/domain/pipeline/: fusion_pipeline.py  model.py
aura_v2/domain/ports/: __init__.py  sensor_port.py  tracking_port.py
aura_v2/domain/services/: __init__.py  association.py  colission_prediction.py  collision_prediction.py  hungarian_assoc.py  multi_sensor_fusion.py  sensor_characteristics.py  threat_analysis.py
aura_v2/domain/tracking/: models.py  track_state.py
aura_v2/domain/value_objects/: __init__.py  collision.py  confidence.py  covariance.py  identifiers.py  ids.py  metrics.py  position.py  position_2d.py  tactical_alert.py  tactical_alert.py.bak  threat.py  track_id.py  velocity.py
aura_v2/infrastructure/: container.py
aura_v2/infrastructure/config/: container.py
aura_v2/infrastructure/fusion/: ufk_core.py
aura_v2/infrastructure/mlops/: __init__.py  model_registry.py
aura_v2/infrastructure/monitoring/: telemetry.py  telemtry.py
aura_v2/infrastructure/observability/: telemetry.py
aura_v2/infrastructure/persistence/: __init__.py  in_memory.py  mongo.py  mongo_client.py  mongo_repository.py  reader.py  retention.py  schemas.py  writer.py
aura_v2/migration/: run_parallel.py
aura_v2/observability/: logging_config.py  metrics.py  metrics_validator.py  tracing.py
aura_v2/pipeline/: data_quality.py
aura_v2/sources/: __init__.py  base.py  demo.py  jsonl.py  kafka.py
aura_v2/tests/: test_health.py  test_imports.py
aura_v2/utils/: time.py
aura_v2/web_dashboard/: __init__.py  api.py  dashboard.html
certs/: localhost.conf  localhost.crt  localhost.key
config/: mongo.example.env  v2_5.flags.env.example
db/migration/: run_parallel.py
docs/benchmarks/: README.md
docs/configs/: advanced_fusion.md  jpda_mht.md
docs/internal/: flake8-tune.patch  project_tree.json
ops/deployment/: rollback.py
ops/runbooks/: mongo_retention.md
scripts/: benchmark_fusion.py  bootstrap.sh  check_init_imports.py  pylance_report.sh
scripts/benchmarks/: association_benchmark.py  fusion_benchmark.py
scripts/dev/: dump_tree.py
tests/: conftest.py  fixtures.py  test_api_time.py  test_health.py  test_utils_time.py
tests/architecture/: test_container_contract.py  test_dependencies.py
tests/association/: test_kbest_jpda.py  test_murty_kbest.py
tests/dss/: __init__.py  test_integration_wms_dispatch.py  test_policy_eval.py
tests/filters/: test_sr_ukf.py
tests/fusion/: test_adapters_normalize.py  test_association_ukf_integration.py  test_end_to_end_fuse.py  test_fusion_pipeline.py  test_straight_api.py
tests/integration/: test_advanced_intelligence_coordinator.py  test_multi_sensor_tracking.py  test_persistence.py  test_persistence.py.bak  test_pipeline_e2e.py  test_track_ttl.py  test_wms_payloads.py
tests/observability/: test_budgets.py  test_metrics_validator.py
tests/performance/: test_latency_budget.py
tests/persistence/: test_retention_ttl.py  test_roundtrip_tracks.py  test_writer_reader_roundtrip.py
tests/tests/: __init__.py
tests/tracking/: test_hungarian_assoc.py  test_hungarian_costs.py  test_hungarian_solver.py
tests/unit/: test_collision_predictor.py  test_threat_analyzer.py
tmp/mongo/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--3615326630062536948.wt  collection-2--3615326630062536948.wt  collection-4--3615326630062536948.wt  collection-7--3615326630062536948.wt  index-1--3615326630062536948.wt  index-3--3615326630062536948.wt  index-5--3615326630062536948.wt  index-6--3615326630062536948.wt  index-8--3615326630062536948.wt  index-9--3615326630062536948.wt  sizeStorer.wt
typings/: README.md
(+83 files in other folders)
