[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-v2"
version = "2.0.0"
requires-python = ">=3.11"
description = "AURA Enterprise v2 – real-time multi-object tracking"
readme = "README.md"

dependencies = [
  # Core
  "pydantic>=2.5",
  "numpy>=1.26",
  "attrs>=23.1",
  "filterpy>=1.4.5",
  "scipy>=1.11",
  "scikit-learn>=1.3",

  # API & IO
  "fastapi>=0.116",
  "grpcio>=1.59",
  "websockets>=12.0",

  # Observability (lightweight core)
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "prometheus-client>=0.22",
  "structlog>=25",

  # Messaging / storage clients
  "aioredis>=2.0",
  "aiokafka>=0.12",
  "motor>=3.7"
]

[project.optional-dependencies]
tracking = [
  "boxmot>=15",
  "ultralytics>=8.3",
  "supervision>=0.26",
  "deep-sort-realtime>=1.3",
  "lap>=0.5.1"
]
observability = [
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "prometheus-client>=0.22",
  "structlog>=25"
]
messaging = ["aiokafka>=0.12", "aioredis>=2.0", "motor>=3.7"]
# pin NumPy for numba on macOS
perf = ["numba>=0.61", "numpy<2.3"]
# Linux-only GPU extras (won’t resolve on macOS)
gpu = [
  "cupy-cuda12x>=13 ; platform_system == 'Linux'",
  "tensorrt>=8.6     ; platform_system == 'Linux'"
]

[project.scripts]
aura = "enterprise_aura.aura_v2.main:app_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["enterprise_aura*", "aura_v2*"]
