[metadata]
name = aura-v2
version = 2.0.0
description = AURA Enterprise v2 – real-time multi-object tracking

[options]
packages = find:
python_requires = >=3.11
install_requires =
    pydantic>=2.5
    numpy>=1.26
    attrs>=23.1
    filterpy>=1.4.5
    scipy>=1.11
    scikit-learn>=1.3
    fastapi>=0.116
    uvicorn>=0.29
    typer>=0.12
    pyyaml>=6.0
    grpcio>=1.59
    websockets>=12.0
    opentelemetry-api>=1.20
    opentelemetry-sdk>=1.20
    prometheus-client>=0.22
    structlog>=25
    aioredis>=2.0
    aiokafka>=0.12
    motor>=3.7

[options.extras_require]
tracking =
    boxmot>=15
    ultralytics>=8.3
    supervision>=0.26
    deep-sort-realtime>=1.3
    lap>=0.5.1
observability =
    opentelemetry-api>=1.20
    opentelemetry-sdk>=1.20
    prometheus-client>=0.22
    structlog>=25
messaging =
    aiokafka>=0.12
    aioredis>=2.0
    motor>=3.7
perf =
    numba>=0.61
    numpy<2.3
test =
    pytest>=8.2
    requests>=2.32
    httpx>=0.25

[options.packages.find]
where = .
include = aura_v2*
